--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ pip>=24.2
 fuzzywuzzy[speedup]
 Flask
 pandas
-spacy
+spacy==3.5.0
 pt_core_news_md @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_md-3.0.0/pt_core_news_md-3.0.0.tar.gz
