--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,9 @@ pandas
 gunicorn
 openpyxl
 werkzeug
+pip>=24.2
 fuzzywuzzy[speedup]
 spacy==3.5.0
+numpy==1.23.3
+pt_core_news_md @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_md-3.0.0/pt_core_news_md-3.0.0.tar.gz
+
